--- a/dentition.html
+++ b/dentition.html
@@ -4,12 +4,16 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <link rel="stylesheet" href="styles.css">
-            <title>Ardipithecus Ramidus</title>
+            <title>Dentition</title>
         </head>  
         <body>
             <nav class="nav">
                 <h1>Ardipithecus <em>ramidus</em></h1>
             </nav>
+            <div class="panel">
+                <h2>Dentition</h2>
+                <p>Dr. Tim D. White and his Middle Awash research team decided on the classification of Ar. <em>ramidus</em> based on solely dentition at first. What were some of the things that allowed his team to make this classification?</p>
+            </div>
             <div class="panel">
                 <h2>Molars</h2>
                 <p>The overall appearance of Ar. <em>ramidus</em> molars are more similar to the chimpanzees of today than Australopithecus <em>afarensis</em> (Lucy), who lived only 1 million years later than Ar. <em>ramidus</em>.</p>
@@ -18,7 +22,7 @@
             <p class="caption">Decidious first molar comparisons... show a wide separation between the dm1 of Aramis and those of other early hominid species.<br>a, Dryopithecus; b, Pan paniscus; c, Pan troglodytes; <u>d, Australopithecus ramidus (APA-VP-1/129);</u> e, A. afarensis (Lucy); f, A. africanus (Tuang); g, A. robustus; h, A. boisei; i, Homo sapiens (modern).</p>
             <div class="panel">
                 <p>Both the distal and buccal (inside and outside) edges of the molars are bowl-shaped. </p>
-                <p>The molars have less enamel thickness than chimpanzees, but more than Australopiths. The thickness suggests two things: that Ar. <em>ramidus</em> is an intermediary between chimpanzees and other pre-human hominids, and that their diets included more meats than chimpanees.</p>
+                <p>The molars have less enamel thickness than chimpanzees, but more than Australopiths. The thickness suggests two things: that Ar. <em>ramidus</em> is an intermediary between chimpanzees and other pre-human hominids, and that their diets included softer foods than chimpanees.</p>
                 <p>Additionally, Ar. <em>ramidus</em> has a flatter jaw attatchment point, or articular eminence.</p>
             </div>
             <img src="lucy jaw.jpg" alt="Australopithecus afarensis jaw">
