--- a/species.html
+++ b/species.html
@@ -15,12 +15,12 @@
                 <p>Since Ar. ramidus lacks other derived traits in early hominins, researchers believe that its bipedal traits were acquired shortly after diverging with the last common ancestor with chimpanzees.</p>
                 <p>The following features are some things that make Ardipithecus <em>ramidus</em> unique.</p>
             </div>
-            
             <div class="panel">
                 <h2>Pelvis</h2>
                 <p>The pelvis of Ar. ramidus is indicative of natural propensity towards both quadrupedal and bipedal locomotion.</p>
             </div>
-            <img src="ardi-lucy-pelvis.jpeg">
+            <img src="ardi-lucy-pelvis.jpeg" alt="Ardi's pelvis and Lucy's pelvis">
+            <p class="center">Ardi's pelvis (white) overlaid with Lucy's pelvis (yellow).</p>
             <div class="panel">
                 <p>The ilium became wider and shorter, the sacroiliac joint more posterior, and the lower spine more curved. Compared to Lucy’s pelvis, Ardi has a longer lower pelvis and less robusticity.</p>
             </div>
@@ -34,6 +34,10 @@
                 <h2>Arms</h2>
                 <p>The radius of Ar. ramidus does not have features that imply knuckle-walking.<br><br>The trochlear notch on the ulna is more rear-facing than that of other extinct hominins.<br><br>In addition to these, Ardi's wrists are more flexible than those of other apes, allowing the palms to grab branches instead of the fingers.</p>
             </div>
+            <img src="ardi hand 2.jpg" alt="Artist rendition of what an Ar. ramidus hand looked like.">
+            <p class="caption">Artist rendition of what an Ar. <em>ramidus</em> hand looked like.</p>
+            <img src="chimp hand.jpg" alt="Artist rendition of a modern chimpanzee hand.">
+            <p class="caption">Artist rendition of a modern chimpanzee hand.</p>
             <div class="panel">
                 <h2>Hands</h2>
                 <p>As mentioned above, the palms were the primary part of the hands that grasped branches while climbing.<br><br>The middle part of the hand is more flexible than that of other apes, and more like humans. Ar. ramidus could support its bodyweight on its palms. This adaptation helped it to support its bodyweight in one arm, while grabbing for branches with the other.</p>
