--- a/skull.html
+++ b/skull.html
@@ -4,7 +4,7 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <link rel="stylesheet" href="styles.css">
-            <title>Ardipithecus Ramidus</title>
+            <title>Skull</title>
         </head>  
         <body>
             <nav class="nav">
@@ -13,6 +13,14 @@
             <div class="panel">
                 <h2>Skull</h2>
                 <p>Other features on Ar. <em>ramidus</em>’s skull that distinguish it include the placement of the foramen magnum on the underside and shortened basioccipital area (the raised part around the foramen magnum).<br><br>The brain case of Ar. <em>ramidus</em> is similar to a modern chimpanzee, around 400 cubic centimeters. This cavity is more ovular in chimpanzees, and more circular in Australopiths and humans.</p>
+            </div>
+            <div class="panel">
+                <p>Note the following features the 3d models below:</p>
+                <ul>
+                    <li>Foramen magnum position (hole on bottom)</li>
+                    <li>Brain case shape</li>
+                    <li>Face prominence</li>
+                </ul>
             </div>
             <div class="sketchfab-embed-wrapper"> <iframe width=100% height="450px" title="Skull without mandible" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/e37e3a49c95d477ba54f8f55421f8e3f/embed"></iframe></div><p class="caption">3D model homo sapiens (human) skull.</p>
             <div class="sketchfab-embed-wrapper"> <iframe width=100% height="450px" title="Ardipithecus ramidus skull" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/1b55fb758d164a60bab6a7d57f750b01/embed"></iframe></div><p class="caption">3D model Ar. <em>ramidus</em> skull.</p>
