--- a/phylogeny.html
+++ b/phylogeny.html
@@ -10,51 +10,13 @@
             <nav class="nav">
                 <h1>Ardipithecus <em>ramidus</em></h1>
             </nav>
-            <div class="panel">
-                <div class="tree">
-                    <ul>
-                        <li>
-                            <a href="#">Sahelanthropus <em>tchadensis</em></a>
-                                <ul>
-                                    <li>
-                                        <a href="#">Ardipithecus <em>ramidus</em></a>
-                                    </li>
-                                    <li>
-                                        <a href="#">A. <em>anamensis</em></a>
-                                        <ul>
-                                            <li>
-                                                <a href="#">A. <em>afarensis</em></a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <a href="#">Unknown</a>
-                                        <ul>
-                                            <li>
-                                                <a href="#">Paranthropus <em>aethiopicus</em></a>
-                                                <ul>
-                                                    <li>
-                                                        <a href="#">Paranthropus <em>robustus</em></a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#">Paranthropus <em>boisei</em></a>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                            <li>
-                                                <a href="#">Australopithecus <em>garhi</em></a>
-                                                <ul>
-                                                    <li>
-                                                        <a>Australopithecus <em>africanus</em></a>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                        </li>
-                    </ul>
-                </div>
+            <div class="panel" style="overflow-x:auto;">
+                <h2>Phylogeny</h2>
+                <table>
+                    <tr>
+                       <td class="span-2"><img src="whole_tree.svg"></td>
+                    </tr>
+                </table>
             </div>
         </body>
     </html>
