--- a/phylogeny.html
+++ b/phylogeny.html
@@ -10,11 +10,14 @@
             <nav class="nav">
                 <h1>Ardipithecus <em>ramidus</em></h1>
             </nav>
-            <div class="panel" style="overflow-x:auto;">
+            <div class="panel">
                 <h2>Phylogeny</h2>
+                <p>Finding fossils in as good condition as old as Ardi is extremely rare.<br><br>Even Ardi is missing a knee joint—an element which would irrefutably determine her phylogenic place. </p>
+            </div>
+            <div class="panel" style="overflow-x:auto;">
                 <table>
                     <tr>
-                       <td class="span-2"><img src="whole_tree.svg"></td>
+                       <td class="span-2"><img src="whole_tree.svg" style="height:600px; object-fit: cover;"></td>
                     </tr>
                 </table>
             </div>
