--- a/phylogeny.html
+++ b/phylogeny.html
@@ -17,7 +17,7 @@
             <div class="panel" style="overflow-x:auto;">
                 <table>
                     <tr>
-                       <td class="span-2"><img src="whole_tree.svg" style="height: 650px; object-fit: fill;"></td>
+                       <td class="span-2"><img src="whole_tree.svg" style="width: 1000px; height: 700px; object-fit: fill;"></td>
                     </tr>
                 </table>
             </div>
