--- a/species.html
+++ b/species.html
@@ -42,7 +42,9 @@
                 <h2>Hands</h2>
                 <p>As mentioned above, the palms were the primary part of the hands that grasped branches while climbing.<br><br>The middle part of the hand is more flexible than that of other apes, and more like humans. Ar. ramidus could support its bodyweight on its palms. This adaptation helped it to support its bodyweight in one arm, while grabbing for branches with the other.</p>
             </div>
-            <button>Next ></button>
-            <a href="skull.html"><button>< Back</button></a>
+            <div class="center">
+                <a href="skull.html"><button>< Back</button></a>
+                <a href="phylogeny.html"><button>Next ></button></a>
+            </div>
         </body> 
     </html>  
