--- a/phylogeny.html
+++ b/phylogeny.html
@@ -12,14 +12,127 @@
             </nav>
             <div class="panel">
                 <h2>Phylogeny</h2>
-                <p>Finding fossils in as good condition as old as Ardi is extremely rare.<br><br>Even Ardi is missing a knee joint—an element which would irrefutably determine her phylogenic place. </p>
+                <p>Finding fossils in as good condition as old as Ardi is extremely rare.<br><br>Even Ardi is missing a knee joint—an element which would irrefutably determine her phylogenic place.<br><br>The following phylogenic tree is from a <a href="https://doi.org/10.1017/pab.2019.12">2019 study on hominin phylogeny</a> at Cambridge University.<br><br>Notice how Ar. <em>ramidus</em> has its own branch!</p>
             </div>
             <div class="panel" style="overflow-x:auto;">
-                <table>
-                    <tr>
-                       <td class="span-2"><img src="whole_tree.svg" style="width: 1000px; height: 700px; object-fit: fill;"></td>
-                    </tr>
-                </table>
+                <img src="whole_tree.svg" style="width: 1000px; height: 700px; object-fit: fill;">
+            </div>
+            <div class="panel" style="overflow-x:auto;" hidden>
+                <ul class="tree" style="width: 3500px;">
+                    <li>
+                        <ul>
+                            <li>
+                                <a href="#">Gorilla <em>gorilla</em></a>
+                            </li>
+                            <li>
+                                <ul>
+                                    <li>
+                                        <a></a><!--Unknown for tchad & chimp split-->
+                                        <ul>
+                                            <li>
+                                                <a>Pan <em>troglodytes</em> (chimpanzee)</a>
+                                            </li>
+                                            <li>
+                                                <a>Sahelanthropus <em>tchadensis</em></a>
+                                                <ul>
+                                                    <li>
+                                                        <a><b>Ardipithecus <em>ramidus</em> (Ardi)</b></a>
+                                                    </li>
+                                                    <li>
+                                                        <a>Australopithecus <em>anamensis</em></a>
+                                                        <ul>
+                                                            <li>
+                                                                <a>Australopithecus <em>afarensis</em> (Lucy)</a>
+                                                            </li>
+                                                        </ul>
+                                                    </li>
+                                                    <li>
+                                                        <a></a>
+                                                        <ul>
+                                                            <li>
+                                                                <a>Paranthropus <em>aethiopicus</em></a>
+                                                            </li>
+                                                            <li>
+                                                                <a></a>
+                                                                <ul class="tree">
+                                                                    <li>
+                                                                        <a>Paranthropus <em>boisei</em></a>
+                                                                    </li>
+                                                                    <li>
+                                                                        <a>Paranthropus <em>robustus</em></a>
+                                                                    </li>
+                                                                </ul>
+                                                            </li>
+                                                            <li>
+                                                                <a>Australopithecus <em>africanus</em></a>
+                                                            </li>
+                                                            <li>
+                                                                <a></a>
+                                                                <ul class="tree">
+                                                                    <li>
+                                                                        <a>Australopithecus <em>gharhi</em></a>
+                                                                        <ul>
+                                                                            <li>
+                                                                                <a>Homo <em>florsiensis</em></a>
+                                                                            </li>
+                                                                            <li>
+                                                                                <a>Homo <em>habilis</em></a>
+                                                                            </li>
+                                                                            <li>
+                                                                                <a></a>
+                                                                                <ul>
+                                                                                    <li>
+                                                                                        <a>Homo <em>erectus</em> (African)</a>
+                                                                                    </li>
+                                                                                    <li>
+                                                                                        <a></a>
+                                                                                        <ul>
+                                                                                            <li>
+                                                                                                <a>Homo <em>erectus</em> (Georgian)</a>
+                                                                                            </li>
+                                                                                            <li>
+                                                                                                <a>Homo <em>erectus</em> (Asian)</a>
+                                                                                            </li>
+                                                                                            <li>
+                                                                                                <a>Homo ancestor</a>
+                                                                                                <ul>
+                                                                                                    <li>
+                                                                                                        <a>Homo <em>heidelbergensis</em></a>
+                                                                                                        <ul>
+                                                                                                            <li>
+                                                                                                                <a>Homo <em>neanderthalensis</em></a>
+                                                                                                            </li>
+                                                                                                            <li>
+                                                                                                                <a>Homo <em>sapiens</em></a>
+                                                                                                            </li>
+                                                                                                        </ul>
+                                                                                                    </li>
+                                                                                                </ul>
+                                                                                            </li>
+                                                                                        </ul>
+                                                                                    </li>
+                                                                                </ul>
+                                                                            </li>
+                                                                        </ul>
+                                                                    </li>
+                                                                </ul>
+                                                            </li>
+                                                        </ul>
+                                                            
+                                                    </li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="center">
+                <a href="species.html"><button>< Back</button></a>
+                <a href="summary.html"><button>Next ></button></a>
             </div>
         </body>
     </html>
