--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         </head>  
         <body>
             <nav class="nav">
-                <h1>Ardipithecus <em>ramidus</em></h1>
+                <a href="index.html"><h1>Ardipithecus <em>ramidus</em></h1></a>
             </nav>
             <div class="panel">
-                <h2>Virtual Museum: Ardipithecus <em>ramidus</em></h2>
+                <h2>Mobile Virtual Museum: Ardipithecus <em>ramidus</em></h2>
             </div>
             <img src="hadar-mobile.jpg" alt="Paleoanthropologists unearth fossils in Hadar, Ethiopia">
             <div class="panel">
@@ -21,8 +21,11 @@
                     </p>
             </div>
             <div class="center">
+                <a href="conclusion.html"><button style="background-color: #78887f;">Jump to End</button></a>
                 <a href="discovery.html"><button>Enter</button></a>
             </div>
-            
+            <footer>
+                <p style="color: #fff; text-align: center;">&copy;Hana Donnelly</p>
+            </footer>
         </body>
     </html>
