--- a/map.html
+++ b/map.html
@@ -8,7 +8,7 @@
         </head>  
         <body>
             <nav class="nav">
-                <h1>Ardipithecus <em>ramidus</em></h1>
+                <a href="index.html"><h1>Ardipithecus <em>ramidus</em></h1></a>
             </nav>
             <div class="panel">
                 <h2>Map: Ar. <em>ramidus</em></h2>
@@ -17,9 +17,15 @@
             <div class="panel">
                 <iframe src="https://www.google.com/maps/d/embed?mid=10NKJ5vSM5aFRQ9p3yHok03gBk5FEa9A&ehbc=2E312F" width="100%" height="480"></iframe>
             </div>
+            <div class="panel">
+                <p>Next up: A closer look at what Ethiopia looked like when Ardi roamed the land.</p>
+            </div>
             <div class="center">
                 <a href="important-fossils.html"><button>< Back</button></a>
                 <a href="environment.html"><button>Next ></button></a>
             </div>
-        </body> 
-    </html>  
+            <footer>
+                <p style="color: #fff; text-align: center;">&copy;Hana Donnelly</p>
+            </footer>
+        </body>
+    </html>
