--- a/phylogeny.html
+++ b/phylogeny.html
@@ -8,16 +8,17 @@
         </head>  
         <body>
             <nav class="nav">
-                <h1>Ardipithecus <em>ramidus</em></h1>
+                <a href="index.html"><h1>Ardipithecus <em>ramidus</em></h1></a>
             </nav>
             <div class="panel">
                 <h2>Phylogeny</h2>
-                <p>Finding fossils in as good condition as old as Ardi is extremely rare.<br><br>Even Ardi is missing a knee joint—an element which would irrefutably determine her phylogenic place.<br><br>The following phylogenic tree is from a <a href="https://doi.org/10.1017/pab.2019.12">2019 study on hominin phylogeny</a> at Cambridge University.<br><br>Notice how Ar. <em>ramidus</em> has its own branch!</p>
-            </div>
-            <div class="panel" style="overflow-x:auto;">
-                <img src="whole_tree.svg" style="width: 1000px; height: 700px; object-fit: fill;">
+                <p>Finding fossils in as good condition as old as Ardi is extremely rare.<br><br>Even Ardi is missing a knee joint—an element which would irrefutably determine her phylogenic place.<br><br>The following phylogenic tree is from a <a href="https://doi.org/10.1017/pab.2019.12">2019 study on hominin phylogeny</a> at Cambridge University.<br><br>Notice how Ar. <em>ramidus</em> has its own branch.</p>
             </div>
             <div class="panel" style="overflow-x:auto;" hidden>
+                <img src="whole_tree.svg" style="width: 1000px; height: 700px; object-fit: fill;">
+            </div>
+            <div class="panel" style="overflow-x:auto;">
+                <p>Note: I am not sure why the spacing is all weird... Everything is in the right place horizontally but vertically stretched at the bottom!</p>
                 <ul class="tree" style="width: 3500px;">
                     <li>
                         <ul>
@@ -132,7 +133,10 @@
             </div>
             <div class="center">
                 <a href="species.html"><button>< Back</button></a>
-                <a href="summary.html"><button>Next ></button></a>
+                <a href="conclusion.html"><button>Next ></button></a>
             </div>
+            <footer>
+                <p style="color: #fff; text-align: center;">&copy;Hana Donnelly</p>
+            </footer>
         </body>
     </html>
