--- a/skull.html
+++ b/skull.html
@@ -8,11 +8,11 @@
         </head>  
         <body>
             <nav class="nav">
-                <h1>Ardipithecus <em>ramidus</em></h1>
+                <a href="index.html"><h1>Ardipithecus <em>ramidus</em></h1></a>
             </nav>
             <div class="panel">
                 <h2>Skull</h2>
-                <p>Other features on Ar. <em>ramidus</em>’s skull that distinguish it include the placement of the foramen magnum on the underside and shortened basioccipital area (the raised part around the foramen magnum).<br><br>The brain case of Ar. <em>ramidus</em> is similar to a modern chimpanzee, around 400 cubic centimeters. This cavity is more ovular in chimpanzees, and more circular in Australopiths and humans.</p>
+                <p>Other features on Ar. <em>ramidus</em>’s skull that distinguish it include the placement of the foramen magnum on the underside and shortened basioccipital area (the raised part around the foramen magnum).<br><br>The brain case of Ar. <em>ramidus</em> is similar to a modern chimpanzee, around 300-350 cubic centimeters. This cavity is more ovular in chimpanzees, and more circular in Australopiths and humans.<br><br>The face lacks the prognathism found in modern African apes.</p>
             </div>
             <div class="panel">
                 <p>Note the following features the 3d models below:</p>
@@ -26,12 +26,17 @@
             <div class="sketchfab-embed-wrapper"> <iframe width=100% height="450px" title="Ardipithecus ramidus skull" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/1b55fb758d164a60bab6a7d57f750b01/embed"></iframe></div><p class="caption">3D model Ar. <em>ramidus</em> skull.</p>
             <div class="sketchfab-embed-wrapper"> <iframe width="100%" height="450px" title="Female Chimp Skull" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/52cb71658a4b46fca43d443c9a91292e/embed"></iframe></div><p class="caption">3D model modern chimpanzee skull.</p>
             <div class="panel">
-                <p>Both of these features indicate upright posture in Ar. ramidus. These are both derived traits shared with modern humans. Both traits indicate bipedalism in Ar. ramidus. (makes the skull easier to carry with the spine, less reliant on neck muscles)</p>
+                <p>These features indicate upright posture in Ar. ramidus. The location of the foreamen magnum towards the underside and thickened basioccipital area helps the spine support the weight of a the head while standing bipedally.<br><br>These features are known as "derived traits"—traits shared with other bipedal hominins and humans.</p>
+            </div>
+            <div class="panel">
+                <p>Up next: Other distinguishing features of Ar. <em>ramidus</em>.</p>
             </div>
             <div class="center">
                 <a href="dentition.html"><button>< Back</button></a>
                 <a href="species.html"><button>Next ></button></a>
             </div>
-          
-        </body> 
-    </html>  
+            <footer>
+                <p style="color: #fff; text-align: center;">&copy;Hana Donnelly</p>
+            </footer>
+        </body>
+    </html>
