--- a/dentition.html
+++ b/dentition.html
@@ -8,39 +8,40 @@
         </head>  
         <body>
             <nav class="nav">
-                <h1>Ardipithecus <em>ramidus</em></h1>
+                <a href="index.html"><h1>Ardipithecus <em>ramidus</em></h1></a>
             </nav>
             <div class="panel">
                 <h2>Dentition</h2>
-                <p>Dr. Tim D. White and his Middle Awash research team decided on the classification of Ar. <em>ramidus</em> based on solely dentition at first. What were some of the things that allowed his team to make this classification?</p>
+                <p>Dr. Tim D. White and his Middle Awash research team decided on the classification of Ar. <em>ramidus</em> as a whole new species based on solely dentition at first.<br><br>What were some of the things that allowed his team to make this classification?</p>
             </div>
             <div class="panel">
                 <h2>Molars</h2>
-                <p>The overall appearance of Ar. <em>ramidus</em> molars are more similar to the chimpanzees of today than Australopithecus <em>afarensis</em> (Lucy), who lived only 1 million years later than Ar. <em>ramidus</em>.</p>
+                <p>The overall appearance of Ar. <em>ramidus</em> molars are more similar to the chimpanzees of today than to molars of more recently fossilized hominins (like Lucy).</p>
             </div>
             <img src="tooth-comparisons.jpg" alt="A report by the archaeologists at Aramis from 1994 shows tooth comparisons between Ar. ramidus and other hominins.">
             <p class="caption">Decidious first molar comparisons... show a wide separation between the dm1 of Aramis and those of other early hominid species.<br>a, Dryopithecus; b, Pan paniscus; c, Pan troglodytes; <u>d, Australopithecus ramidus (APA-VP-1/129);</u> e, A. afarensis (Lucy); f, A. africanus (Tuang); g, A. robustus; h, A. boisei; i, Homo sapiens (modern).</p>
             <div class="panel">
                 <p>Both the distal and buccal (inside and outside) edges of the molars are bowl-shaped. </p>
                 <p>The molars have less enamel thickness than chimpanzees, but more than Australopiths. The thickness suggests two things: that Ar. <em>ramidus</em> is an intermediary between chimpanzees and other pre-human hominids, and that their diets included softer foods than chimpanees.</p>
-                <p>Additionally, Ar. <em>ramidus</em> has a flatter jaw attatchment point, or articular eminence.</p>
+                <p>Additionally, Ar. <em>ramidus</em> has a flatter jaw attatchment point, or articular eminence than chimpanzees. This, again, implies they ate softer foods than modern chimps, as modern chimps need more muscle for chewing rougher foods.</p>
             </div>
             <img src="lucy jaw.jpg" alt="Australopithecus afarensis jaw">
-            <p class="caption">Model A. <em>afarensis</em> jaw.</p>
+            <p class="caption">Model A. <em>afarensis</em>(Lucy) jaw.</p>
             <div class="sketchfab-embed-wrapper"> <iframe width=100%;  height=450px; title="Ardipithecus ramidus (2501.1rp96-2) - mandible" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/fa656a356b1d47d6a97881e63f10fdb8/embed"></iframe></div><p class="caption">3D model of Ardipithecus <em>ramidus</em> jaw.</p>
             <img src="chimp jaw.jpg" alt="Modern chimpanzee jaw.">
             <p class="caption">Model modern chimpanzee jaw.</p>
             <div class="panel">
                 <h2>Jaw</h2>
-                <p>The shape of Ar. <em>ramidus</em>'s jaw is between the chimp and Australopith shape, with a move from a V-shape to a U-shape.<br><br>The molars are large like chimps, with buccal asymmetry somehwere betweens chimps and Australopiths.<br><br>The incisoral size is also between a chimp and Australopith.</p>
+                <p>The shape of Ar. <em>ramidus</em>'s jaw is between the chimp and Australopith shape, with a move from a V-shape to a U-shape.<br><br>The molars are large like chimps, with buccal asymmetry somehwere betweens chimps and Australopiths.</p>
             </div>
             <img src="ardi-head.jpg">
-            <p class="caption">Model Ardipithecus <em>ramidus</em> head.</p>
+            <p class="caption">Model Ardipithecus <em>ramidus</em> head. Notice the direction the incisors point in is most aligned with the pre-molars.</p>
             <img src="lucy-head.jpg">
-            <p class="caption">Model Australopithecus <em>afarensis</em> head.</p>
+            <p class="caption">Model Australopithecus <em>afarensis</em> (Lucy) head.</p>
             <div class="panel">
-                <p>Ar. <em>ramidus</em> has larger canines than Australopiths, including A. <em>afarensis.</em> 
-                    The canines are more in line with the pre-molars, which is different from A. <em>afarensis</em>, whose canines are more rotated mesiodistally (with the inside edge of the canine towards the tongue) [See above photos].<br><br>This feature is found in “more primitive” apes according to Dr. Tim D. White, and suggests that the canine was not incorporated into the function of the incisors in Ardi.<br><br>The canines have a different thickness than both chimpanzees and Australopiths.</p>
+                <h2>Incisors and canines</h2>
+                <p>The incisoral size is between a chimp and Australopith.<br><br>Ar. <em>ramidus</em> has larger canines than Australopiths, including A. <em>afarensis.</em> 
+                    The canines are more in line with the pre-molars, which is different from A. <em>afarensis</em>, whose canines are more rotated mesiodistally (with the inside edge of the canine towards the tongue) [See above photos].<br><br>This feature is found in “more primitive” apes according to Dr. Tim D. White, and suggests that the canine was not incorporated into the function of the incisors in Ardi.<br><br>The canines have a different thickness than both chimpanzees and Australopiths.<br><br>Dr. Tim D. White, Gen Suwa, and other researchers propose that canine sexual dimorphism was human-like.</p>
             </div>
             <div class="panel">
                 <p>Next up: Ar. <em>ramidus</em>'s skull.</p>
@@ -49,5 +50,8 @@
                 <a href="environment.html"><button>< Back</button></a>
                 <a href="skull.html"><button>Next ></button></a>
             </div>
+            <footer>
+                <p style="color: #fff; text-align: center;">&copy;Hana Donnelly</p>
+            </footer>
         </body>
     </html>
