--- a/discovery.html
+++ b/discovery.html
@@ -8,7 +8,7 @@
         </head>  
         <body>
             <nav class="nav">
-                <a id="top" href="index.html"><h1>Ardipithecus <em>ramidus</em></h1></a>
+                <a href="index.html"><h1>Ardipithecus <em>ramidus</em></h1></a>
             </nav>
             <div class="panel">
                 <h2>Discovery</h2>
@@ -19,24 +19,23 @@
             <img src="digging.png" alt="An archaeologist digs in the soils in Middle Awash, Ethiopia. A view similar to what Gen Suwa may have seen while walking around at Aramis, Ethiopia.">
             <p class="caption">A view similar to what Gen Suwa may have seen while walking around at Aramis, Ethiopia.</p>
             <div class="panel">
-                <p>Upon closer inspection of the shining rock, Suwa noticed it was not a rock at all—in fact, it was a hominin tooth root [“A New Kind of Ancestor: Ardipithecus Unveiled”].</p>
+                <p>Upon closer inspection of the shining rock, Suwa noticed it was not a rock at all—in fact, it was a hominin tooth root.</p>
             </div>
             <img src="tooth.jpg" alt="A tooth root discovered by the archeologist team at Aramis in 1994.">
             <p class="caption">A juvenile hominin jaw discovered by the team Gen Suwa was part of at Aramis, Ethiopia in 1994 (ARA-VP-1/129).</p>
             <div class="panel">
-                <p>The archaeologists at Aramis sprang into action and began searching the area on their hands and knees for more hominin fossils.<br><br>In the following days, they found an additional hominin jaw piece with a deciduous molar, or baby tooth (ARA-VP-1/129). The researchers determined the features of the molar were so primitive that they had found a hominin species older than Au. afarensis, which was the oldest known hominin at the time [“Australopithecus ramidus, a new species of hominin…”].</p>
+                <p>The archaeologists at Aramis sprang into action and began searching the area on their hands and knees for more hominin fossils.<br><br>In the following days, they found an additional hominin jaw piece with a baby tooth (deciduous molar) [ARA-VP-1/129].<br><br>The researchers determined the features of the molar were so primitive that they had found a hominin species older than Au. afarensis, which was the oldest known hominin at the time.</p>
             </div>
             <img src="gona.jpg" alt="The desert in the Middle Awash region of Ethiopia">
             <p class="caption">The desert in the Middle Awash region of Ethiopia.</p>
             <div class="panel">
-                <p>Two months later, UC Berkley graduate student, Yohannes Haile-Selassie, spotted hand bones in the Aramis soil.<br><br>
+                <p>Two months later, UC Berkley graduate student, Yohannes Haile-Selassie, spotted hand bones in the soil nearby.<br><br>
                     As the archaeological team searched the area, they found bone after bone: part of a pelvis, leg bones, an ankle, a foot, a hand, an arm, another jaw with teeth, a cranium. By January 1995, the team had unearthed almost an entire skeleton.<br><br>
-                    The remains were incredibly brittle, some crumbling as they held them. Fearing for the robustness of the fossil, the researchers cut out chunks of earth containing the fossils to send to the National Museum of Ethiopia for careful removal. Three years later, 100% of the remains had been moved to the lab.<br><br>
-                    The pieces were carefully cast and scanned to be recreated digitally. After 10 models, Suwa felt satisfied with his digitally reconstructed skull. And 14 models later, anatomist C. Owen Lovejoy of Kent State University felt satisfied with his reconstructed pelvis.
+                    The remains were incredibly brittle, some crumbling as they held them. The scientists were afraid the fossil would wither away as they unearthed it.<br><br>They began cutting the ground around the skeleton. In one large chunk, the skeleton was shipped off to the  National Museum of Ethiopia for careful removal from the 4.4 -million-year-old soil.<br><br>As the skeleton was removed, its pieces were carefully cast and scanned to be recreated digitally. 10 models later, Gen Suwa felt satisfied with his digitally reconstructed skull. And 14 models later, anatomist C. Owen Lovejoy of Kent State University felt satisfied with his reconstructed pelvis.
                     </p>
             </div>
-            <img src="pelvis-recreation.jpg" alt="A computer-recreated Ar. ramidus pelvis.">
-            <p class="caption">Digitally-recreated ar. ramidus pelvis from the University Museum at the University of Tokyo.</p>
+            <img src="pelvis-recreation.jpg" alt="A computer-recreated Ar. ramidus pelvis. Digitally-recreated ar. ramidus pelvis from the University Museum at the University of Tokyo, where Gen Suwa is a professor.">
+            <p class="caption">Digitally-recreated ar. ramidus pelvis from the University Museum at the University of Tokyo, where Gen Suwa is a professor.</p>
             <div class="panel">
                 <p>Next up: Important fossil finds of Ar. <em>ramidus</em>.</p>
             </div>
@@ -44,6 +43,8 @@
                 <a href="index.html"><button>< Back</button></a>
                 <a href="important-fossils.html"><button>Next ></button></a>
             </div>
-            
-        </body> 
-    </html>  
+            <footer>
+                <p style="color: #fff; text-align: center;">&copy;Hana Donnelly</p>
+            </footer>
+        </body>
+    </html>
