--- a/environment.html
+++ b/environment.html
@@ -8,39 +8,45 @@
         </head>  
         <body>
             <nav class="nav">
-                <h1>Ardipithecus <em>ramidus</em></h1>
+                <a href="index.html"><h1>Ardipithecus <em>ramidus</em></h1></a>
             </nav>
             <div class="panel">
                 <h2>Origins of bipedalism</h2>
-                <p>It's important to understand the "savanna theory of bipedalism" when determining Ar <em>ramidus</em>'s environment.</p>
+                <p>It's important to understand the savanna hypothesis of bipedalism when determining Ar <em>ramidus</em>'s environment.</p>
             </div>
             <div class="panel">
-                <p><u>Savanna theory of bipedalism:</u> Humans and other hominins became bipedal in response to the demands of a savanna environment.</p>
+                <p><u>Savanna hypothesis:</u> Humans and other hominins became bipedal as an adaptation to savanna environments. >For example, seeing predators from further away due to the extra height.<br><br>Not every hominin discovered fits into this theory, and its influence in evolution is still questioned.</p>
             </div>
             <img src="middle awash.jpg" alt="Middle Awash region of the Awash river in Ethiopia.">
             <p class="caption">The Awash River in the now-arid Middle Awash region of Ethiopia.</p>
             <div class="panel">
                 <h2>Grassy woodslands or wooded grasslands?</h2>
-                <p>For years, researchers have debated what kind of environment Ar. <em>ramidus</em> lived in.<br><br>They had an idea of what kind of animals lived in the area based on soil analyses. They also knew that Ardi's fossil had traits like a moveable big toe and long pelvis allowing for adept climbing. But they weren't sure where, or if, the savanna theory of bipedalism fit in.
+                <p>For years, researchers have debated what kind of environment Ar. <em>ramidus</em> lived in.<br><br>They had an idea of what kind of animals lived in the area based on soil analyses. They also knew that Ardi's fossil had traits like a moveable big toe and long pelvis allowing for adept climbing. But they weren't sure where, or if, the savanna hypothesis fit in.<br><br>Based on analyses of soil and fossils from the Middle Awash region, researchers have come up with two proposals of Ardi's habitat.</p>
             </div>
             <img src="kruger-national-park.webp" alt="The wooded grasslands of Kruger National Park.">
             <p class="caption">Wooded grasslands in Kruger National Park, South Africa.</p>
             <div class="panel">
                 <h2>Theory 1: Wooded grasslands</h2>
-                <p>The group of researchers supporting this theory propose that the Middle Awash was an arid, grassy savanna with sparse tree growth.<br><br>This group of researchers did analyses on soils, finding remains from grasses. They determined that 40-60% of the ground was covered in grasses, fitting the definition of African vegetation by the United Nations Education, Scientific and Cultural Organization.<br><br>Additionally, geochemist Thure Cerling of the University of Utah in Salt Lake City says Aramis soil samples showed the ground to be too arid to support more than a thin forest.<br><br>Overall, these researchers believe that Ar. ramidus and Aramis support the savanna-origin theory of bipedlism.
+                <p>The group of researchers supporting this theory propose that the Middle Awash was an arid, grassy savanna with sparse tree growth.<br><br>This group of researchers did analyses on soils, finding remains from grasses. They determined that 40-60% of the ground was covered in grasses, fitting the definition of African vegetation by the United Nations Education, Scientific and Cultural Organization.<br><br>Additionally, geochemist Thure Cerling of the University of Utah in Salt Lake City says Aramis soil samples showed the ground to be too arid to support more than a thin forest.<br><br>The conclusion: Ar. <em>ramidus</em> lived in grasslands, supporting the savanna hypothesis of bipedalism.</p>
             </div>
             <img src="kibwezi.jfif" alt="Grassy woodlands in Kibwezi National Forest, Kenya.">
             <p class="caption">Grassy woodlands in Kibwezi National Forest, Kenya.</p>
             <div class="panel">
                 <h2>Theory 2: Grassy woodlands</h2>
-                <p>On the other hand, researchers at the Middle Awash research group believe that, while Aramis had areas of grasses, that Ar <em>ramidus</em> lived its life in the forest.<br><br>In 2010, Dr. Tim D. White said, "We're not focusing on the places Ardi would have seen during her life... Rather, what we're trying to understand is which part of that environment this big primate preferred as its habitat—its address, where it lived."<br><br>His Middle Awash research group studied isotopes in fossilized teeth from Ar. <em>ramidus</em> and other  mammals to compare their diets.<br><br>They found that Ar. <em>ramidus</em> had a more similar diet to woodland animals in the area. Additionally, they determined that the shape of Ar. <em>ramidus</em> teeth implies a diet of woodland plants and fruits.</p>
+                <p>On the other hand, researchers at the Middle Awash research group believe that, while Aramis had areas of grasses, that Ar. <em>ramidus</em> lived its life in the forest.<br><br>In 2010, Dr. Tim D. White said, <em>"We're not focusing on the places Ardi would have seen during her life... Rather, what we're trying to understand is which part of that environment this big primate preferred as its habitat—its address, where it lived."</em><br><br>His Middle Awash research group studied isotopes in fossilized teeth from Ar. <em>ramidus</em> and other  mammals to compare their diets.<br><br>They found that Ar. <em>ramidus</em> had a more similar diet to woodland animals in the area.<br><br>Additionally, they determined that the shape of Ar. <em>ramidus</em> teeth implies a diet of woodland plants and fruits.<br><br>The conclusion: Ar. <em>ramidus</em> lived in a grassy forest, disproving the savanna hypothesis.</p>
             </div>
             <div class="panel">
-                <p>It's still not known with 100% certainty what habitat </p>
+                <p>It's still not known with 100% certainty what habitat Ar. <em>ramidus</em> lived in, but the general consensus in the science world is these creatures lived in a wooded environment.</p>
+            </div>
+            <div class="panel">
+                <p>Up next: A closer look at Ar. <em>ramidus</em> teeth.</p>
             </div>
             <div class="center">
                 <a href="map.html"><button>< Back</button></a>
                 <a href="dentition.html"><button>Next ></button></a>
             </div>
-        </body> 
-    </html>  
+            <footer>
+                <p style="color: #fff; text-align: center;">&copy;Hana Donnelly</p>
+            </footer>
+        </body>
+    </html>
