--- a/species.html
+++ b/species.html
@@ -8,11 +8,11 @@
         </head>  
         <body>
             <nav class="nav">
-                <h1>Ardipithecus <em>ramidus</em></h1>
+                <a href="index.html"><h1>Ardipithecus <em>ramidus</em></h1></a>
             </nav>
             <div class="panel">
                 <h2>Distinguishing features</h2>
-                <p>Since Ar. ramidus lacks other derived traits in early hominins, researchers believe that its bipedal traits were acquired shortly after diverging with the last common ancestor with chimpanzees.</p>
+                <p>Since Ar. ramidus lacks some derived traits found in early hominins, researchers believe that its bipedal traits were acquired shortly after diverging with the last common ancestor with chimpanzees.</p>
                 <p>The following features are some things that make Ardipithecus <em>ramidus</em> unique.</p>
             </div>
             <div class="panel">
@@ -24,15 +24,18 @@
             <div class="panel">
                 <p>The ilium became wider and shorter, the sacroiliac joint more posterior, and the lower spine more curved. Compared to Lucy’s pelvis, Ardi has a longer lower pelvis and less robusticity.</p>
             </div>
-            <div class="sketchfab-embed-wrapper"> <iframe width=100% height="550px" title="Female Pelvis, 32yo" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/84ebbcbd54c34037bdd95ca187b51c05/embed?ui_infos=0"> </iframe> </div>
-            <div class="sketchfab-embed-wrapper"> <iframe width=100% height="550px" title="Ardi Pelvis" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/776fbe5c0c164998849f26f51776265b/embed"> </iframe> </div>
+            <div class="sketchfab-embed-wrapper"> <iframe width=100% height="550px" title="Female Pelvis, 32yo" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/84ebbcbd54c34037bdd95ca187b51c05/embed?ui_infos=0"> </iframe></div>
+            <p class="caption">Homo <em>sapiens</em> (human) pelvis.</p>
+            <div class="sketchfab-embed-wrapper"> <iframe width=100% height="550px" title="Ardi Pelvis" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/776fbe5c0c164998849f26f51776265b/embed"> </iframe></div>
+            <p class="caption">Ardipithecus <em>ramidus</em> pelvis.</p>
             <div class="sketchfab-embed-wrapper"> <iframe width=100% height="550px" title="Lucy Pelvis" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/bf5e316dad5d4f7bb75fbb104473e637/embed"> </iframe> </div>
+            <p class="caption">Australopithecus <em>afarensis</em> (Lucy) pelvis.</p>
             <div class="panel">
-                <p>These traits are indicative of bipedalism as they allow for better lower-limb—muscle attachment points when moving bipedally.</p> 
+                <p>These traits are indicative of bipedalism as they allow for better lower-limb-muscle attachment points for ease moving bipedally.</p> 
             </div>
             <div class="panel">
                 <h2>Arms</h2>
-                <p>The radius of Ar. ramidus does not have features that imply knuckle-walking.<br><br>The trochlear notch on the ulna is more rear-facing than that of other extinct hominins.<br><br>In addition to these, Ardi's wrists are more flexible than those of other apes, allowing the palms to grab branches instead of the fingers.</p>
+                <p>The trochlear notch on the ulna is more rear-facing than that of other extinct hominins.<br><br>In addition to these, Ardi's wrists are more flexible than those of other apes, allowing the flexible palms to grab branches instead of the fingers. The radius of Ar. <em>ramidus</em>> does not have features that imply knuckle-walking. Its forarms also lack adaptations seen in other apes supporting vertical climbing and forearm suspension.</p>
             </div>
             <img src="ardi hand 2.jpg" alt="Artist rendition of what an Ar. ramidus hand looked like.">
             <p class="caption">Artist rendition of what an Ar. <em>ramidus</em> hand looked like.</p>
@@ -42,9 +45,15 @@
                 <h2>Hands</h2>
                 <p>As mentioned above, the palms were the primary part of the hands that grasped branches while climbing.<br><br>The middle part of the hand is more flexible than that of other apes, and more like humans. Ar. ramidus could support its bodyweight on its palms. This adaptation helped it to support its bodyweight in one arm, while grabbing for branches with the other.</p>
             </div>
+            <div class="panel">
+                <p>Up next: Where Ar. <em>ramidus</em> fits in on the hominin family tree.</p>
+            </div>
             <div class="center">
                 <a href="skull.html"><button>< Back</button></a>
                 <a href="phylogeny.html"><button>Next ></button></a>
             </div>
-        </body> 
-    </html>  
+            <footer>
+                <p style="color: #fff; text-align: center;">&copy;Hana Donnelly</p>
+            </footer>
+        </body>
+    </html>
